--- a/index.html
+++ b/index.html
@@ -63,8 +63,20 @@
                 <option value="H5">H5</option>
                 <option value="H6">H6</option>
             </select>
-            
+            <select id="fontName" class="adv-option-button"></select>
+            <select id="fontSize" class="adv-option-button"></select>
+
+            <div class="input-wrapper">
+                <input type="color" id="foreColor" class="adv-option-button">
+                <label for="foreColor">Font Color</label>
+            </div>
+            <div class="input-wrapper">
+                <input type="color" id="backColor" class="adv-option-button">
+                <label for="backColor">Highlight Color</label>
+            </div>
+            <div class="text-input" contenteditable="true"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
